--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Server side for Skill Swap project",
-  "keywords": [
-    "Skill_Swap"
-  ],
-  "homepage": "https://github.com/NotYash1066/Skill-Swap#readme",
-  "bugs": {
-    "url": "https://github.com/NotYash1066/Skill-Swap/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NotYash1066/Skill-Swap.git"
-  },
-  "license": "ISC",
-  "author": "Yash Karthiya",
-  "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "Server side for Skill Swap project",
+	"keywords": [
+		"Skill_Swap"
+	],
+	"homepage": "https://github.com/NotYash1066/Skill-Swap#readme",
+	"bugs": {
+		"url": "https://github.com/NotYash1066/Skill-Swap/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/NotYash1066/Skill-Swap.git"
+	},
+	"license": "ISC",
+	"author": "Yash Karthiya",
+	"type": "commonjs",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "nodemon server.js"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.0",
+		"express": "^5.1.0",
+		"mongoose": "^8.16.4"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10"
+	}
 }
