--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,11 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
+		"bcryptjs": "^3.0.2",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
+		"express-validator": "^7.2.1",
 		"mongoose": "^8.17.0"
 	},
 	"devDependencies": {
